<resources>
    <string name="prefs_file">Prefs File</string>

    <string name="app_name">Android Assignment 1</string>
    <string name="app_logo">App Logo</string>
    <string name="search">Search</string>
    <string name="search_for_products">Search for products</string>
    <string name="category">Category</string>
    <string name="sort_by">Sort By Price</string>
    <string name="brands">Brands</string>
    <string name="brand_a">Brand A</string>
    <string name="brand_b">Brand B</string>
    <string name="on_sale_only">On Sale Only</string>
    <string name="show_currently_unavailable">Show currently unavailable items.</string>
    <string name="increasing">Increasing</string>
    <string name="decreasing">Decreasing</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">$29.99</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="back">Back to browsing</string>
    <string name="cart_title">Cart</string>
    <string name="cart_icon">Cart Icon</string>
    <string name="total">Total:</string>
    <string name="checkout">Checkout</string>
    <string name="cart_button">Go to cart</string>
    <string name="in_stock">In stock: %1$d</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="product_description">Description of the product goes here…</string>
    <string name="product_amount">1</string>
    <string name="purchase">Purchase</string>
    <string name="cancel">Cancel</string>
    <string name="def">Default</string>
    <string name="zero_dollars">$0.00</string>
    <string name="no_items_found">No Items found.</string>
</resources>