<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main">

    <ImageView
            android:id="@+id/ivImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/product_image"
            style="@style/ProductImageStyle" />

    <ImageView
            android:id="@+id/ivBack"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="ivBackOnClick"
            app:layout_constraintVertical_bias="0.022"
            style="@style/BackButtonStyle" />

    <TextView
            android:id="@+id/txtProductName"
            android:text="@string/product_name"
            app:layout_constraintTop_toBottomOf="@id/ivImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/ProductNameStyle" />

    <TextView
            android:id="@+id/txtProductPrice"
            android:text="@string/product_price"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/txtProductName"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="4dp"
            android:layout_marginStart="12dp"
            style="@style/ProductPriceStyle" />

    <TextView
            android:id="@+id/txtAvailableAmount"
            android:text="@string/in_stock"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/txtProductPrice"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/SmallTextStyle" />

    <LinearLayout
            android:id="@+id/quantitySelector"
            app:layout_constraintTop_toBottomOf="@id/txtProductName"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/AmountSelector">

        <Button
                android:id="@+id/btnDecrease"
                android:text="@string/minus"
                android:onClick="btnDecreaseOnClick"
                style="@style/AmountButton" />

        <TextView
                android:id="@+id/txtAmount"
                android:text="@string/product_amount"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="16sp" />

        <Button
                android:id="@+id/btnIncrease"
                android:text="@string/plus"
                android:onClick="btnIncreaseOnClick"
                style="@style/AmountButton" />
    </LinearLayout>

    <ScrollView
            android:id="@+id/scrollView"
            app:layout_constraintTop_toBottomOf="@id/txtProductPrice"
            app:layout_constraintBottom_toTopOf="@id/btnPurchase"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/ScrollViewStyle">

        <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_description"
                android:textSize="16sp" />
    </ScrollView>

    <Button
            android:id="@+id/btnPurchase"
            android:text="@string/add_to_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="btnAddToCartOnClick"
            style="@style/BigButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>
