<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/search_main"
        tools:context=".MainActivity"
        android:padding="16dp"
        style="@style/BackgroundStyle">

    <ImageView
            android:id="@+id/logoImageView"
            android:src="@drawable/logo"
            style="@style/LogoStyle"
            android:contentDescription="@string/app_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="124dp" />

    <TextView
            android:id="@+id/searchLabel"
            android:text="@string/search"
            android:textSize="16sp"
            style="@style/SearchTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/logoImageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

    <EditText
            android:id="@+id/searchEditText"
            android:hint="@string/search_for_products"
            style="@style/EditTextStyle"
            android:autofillHints="Product name"
            app:layout_constraintTop_toBottomOf="@id/searchLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

    <TextView
            android:id="@+id/categoryLabel"
            android:text="@string/category"
            style="@style/SearchTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/searchEditText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

    <Spinner
            android:id="@+id/categorySpinner"
            style="@style/SpinnerStyle"
            app:layout_constraintTop_toBottomOf="@id/categoryLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" />

    <TextView
            android:id="@+id/sortByLabel"
            android:text="@string/sort_by"
            style="@style/SearchTextViewStyle"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/categorySpinner"
            app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
            android:id="@+id/sortRadioGroup"
            style="@style/RadioGroupStyle"
            app:layout_constraintTop_toBottomOf="@id/sortByLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp">

        <RadioButton
                android:id="@+id/radioPrice"
                android:text="@string/increasing"
                style="@style/WrapContentAllStyle" />

        <RadioButton
                android:id="@+id/radioPopularity"
                android:text="@string/decreasing"
                style="@style/WrapContentAllStyle" />
    </RadioGroup>

    <TextView
            android:id="@+id/brandsLabel"
            android:text="@string/brands"
            style="@style/SearchTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/sortRadioGroup"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

    <CheckBox
            android:id="@+id/brand1CheckBox"
            android:text="@string/brand_a"
            style="@style/WrapContentAllStyle"
            app:layout_constraintTop_toBottomOf="@id/brandsLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" />

    <CheckBox
            android:id="@+id/brand2CheckBox"
            android:text="@string/brand_b"
            style="@style/WrapContentAllStyle"
            app:layout_constraintTop_toBottomOf="@id/brand1CheckBox"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp" />

    <Switch
            android:id="@+id/saleSwitch"
            android:text="@string/show_currently_unavailable"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            style="@style/WrapContentAllStyle"
            app:layout_constraintTop_toBottomOf="@id/brand2CheckBox"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp" />

    <Button
            android:id="@+id/searchButton"
            android:text="@string/search"
            style="@style/SearchButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/saleSwitch"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.156" />
</androidx.constraintlayout.widget.ConstraintLayout>
