<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:orientation="vertical"
        style="@style/BackgroundStyle">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/default_blue"
            android:padding="8dp">

        <ImageView
                android:id="@+id/ivBack"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="ivBackOnClick"
                android:contentDescription="@string/back"
                style="@style/IconStyle" />

        <TextView
                android:id="@+id/tvCartTitle"
                android:text="@string/cart_title"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivCartIcon"
                app:layout_constraintHorizontal_bias="0.5"
                style="@style/TitleText" />

        <ImageView
                android:id="@+id/ivCartIcon"
                android:src="@drawable/ic_cart"
                android:contentDescription="@string/cart_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/IconStyle"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCartItems"
            android:layout_weight="1"
            android:padding="8dp"
            style="@style/BackgroundStyle"/>

    <LinearLayout style="@style/BottomBarStyle">

        <TextView
                android:id="@+id/tvTotalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginEnd="8dp" />

        <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero_dollars"
                android:textSize="18sp"
                android:textStyle="bold" />

        <Button
                android:id="@+id/btnCheckout"
                android:text="@string/checkout"
                android:onClick="btnCheckoutOnClick"
                style="@style/ButtonStyle" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
