<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fitsSystemWindows="true"
        style="@style/BackgroundStyle">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:id="@+id/main"
            style="@style/BackgroundStyle">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/default_blue">

            <ImageView
                    android:src="@drawable/logo_full"
                    android:id="@+id/ivLogo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="ivLogoOnClick"
                    style="@style/BrowseLogoStyle"
                    android:contentDescription="@string/app_logo" />

            <EditText
                    android:hint="@string/search"
                    app:layout_constraintStart_toEndOf="@+id/ivLogo"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="searchOnClick"
                    android:autofillHints="Product Name"
                    style="@style/SearchTextStyle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvItems"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:background="@color/background"
                style="@style/BackgroundStyle" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="23dp"
            android:contentDescription="@string/cart_button"
            app:srcCompat="@drawable/ic_cart"
            android:onClick="fabCartOnClick" />
</FrameLayout>
